tdf#64372 docx import: don't ignore continous section break

If the last two breaks were continuous section breaks,
the last break had simply been ignored:
commit 1fdd61db155cf63d5dd55cc2bfb45af33796e131.

Thus, the default handler picked up any new styles,
and assigned them to PROP_PAGE_DESC which
effectively becomes a new page break.

Most of this patch's code is not needed to resolve this
particular bug which just needs pageStyleName.empty(),
but was added to resolve issues found in unit tests
which depended on the "ignore" behaviour.

Change-Id: I839570b0330ba274552cc671014e997c42765f4b